--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  color: var(--foreground);
-  background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #ffffff;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+/* Center the content on larger screens */
+.body-container {
+  @apply max-w-screen-xl mx-auto;
 }
+.dropdown {
+  @apply fixed top-0 left-0 py-10 pb-28 mt-16 border-x-0  w-full px-4 flex flex-col gap-8 text-2xl font-[550] bg-primary_color font-poppins text-secondary_color h-full overflow-y-auto z-50; /* Add z-50 to bring it on top */
+}
+.glassmorphism {
+  @apply rounded-xl border border-gray-300 bg-white p-5 backdrop-blur;
+}
+
+
