--- a/app/globals.css
+++ b/app/globals.css
@@ -20,5 +20,7 @@ body {
 .glassmorphism_login {
   @apply rounded-xl border border-gray-300 bg-white p-5 py-8 backdrop-blur;
 }
-
+.glassmorphism_cart{
+  @apply rounded-xl bg-green-900 backdrop-blur;
+}
 
